force-app/main/default/objects/Campaign/fields/Lenos_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Lenos_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers updates from Lenos to Campaign Member History object</description>
    <inlineHelpText>Tracks responses to Campaign from Lenos</inlineHelpText>
    <label>Lenos Reporting</label>
    <type>Checkbox</type>
</CustomField>