force-app/main/default/objects/Campaign/fields/Retalix_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Retalix_SF_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Retalix SF ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>